* New UnitAutoChooser feature (tclayton)
*   create UnitAutoChooser class to translate chosen categories into possible unit solutions
*   update MovePanel to use UnitAutoChooser for unit selection and route planning
*   update UnitChooser to support UnitAutoChooser and solution browsing
*   fix existing UnitChooser arrow icons and add left/right icons for solution browsing

* MoveDelegate cleanup (tclayton)
*   move all validation methods to MoveValidator so they can be called on client side
*   make helper functions in MoveDelegate static, so they can be called on client side
*   fix a few spelling mistakes in symbol names

* partial fix for bug [ 1742775 ] Operating system freeze on Windows 98 with Ati Graphics Card (sgb)

* Added support for "color" property, including color picker UI (dowobeha)

Changes for 0.9.1

* implemented minimax AI and alpha-beta AI; currently used in Tic Tac Toe and King's Table (dowobeha)

* implemented new King's Table game and Tic Tac Toe game (dowobeha)

* created common code package to minimize code duplication between different games (dowobeha)

* enhanced game framework to allow easier implementation of new grid-based games (dowobeha)

* show time in chat panel, default is to show chat time in lobby, but not in game (gansito)

* bug fixes (tclayton):
*  [ 1204024 ] Missing Sea Zone 
*  [ 1510049 ] unloading troops bug
*  [ 1640658 ] fighters in classic attacking on friendly carrier
*  [ 1641051 ] Transport Unloading Bug
*  [ 1652870 ] each phase should begin with focus on tabs panel
*  [ 1655181 ] clean up history log entries
*  [ 1659713 ] Java Exception
*  [ 1661095 ] MovePanel should dynamically select best units for route
*  [ 1662464 ] null pointer exception when skipping move phase
*  [ 1662938 ] shadow units don't appear in map overlap sections
*  [ 1671750 ] improve logic for transport load order
*  [ 1672743 ] exceptions thrown by delegates get mangled by proxy